fixed problems with saving caused by migration to SQLite, started preparations for moving to serviceInterval based system instead of ClientDay. Some cosmetic changes.